--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body{
   display: flex;
   margin: 0;
   padding: 0;
+  background-color: var(--gray);
 }
 
 /*SIDE-BAR*/
@@ -51,10 +52,13 @@ h1{
   font-size: 24px;
 }
 
+.m-28{
+  margin-right: 28px;
+}
+
 .icon{
   width: 24px;
   height: 24px;
-  margin-right: 28px;
 }
 
 .row-item{
@@ -73,4 +77,90 @@ h3{
 
 .web-settings{
   margin-top: 64px;
+}
+
+
+/* MAIN-CONTENT */
+
+.main-content{
+  width: 100%;
+}
+
+.header{
+  background-color: var(--white);
+}
+
+.row-1,
+.row-2{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 30px 10px 20px;
+}
+
+.row-1 div{
+  display: flex;
+  align-items: center;
+}
+
+.greetings{
+  margin-right: auto;
+}
+
+.input-text-bar{
+  border: none;
+  background-color: var(--gray);
+  border-radius: 20px;
+  width: 400px;
+  padding: 5px;
+}
+
+.profile-pic-big,
+.profile-pic-small{
+  border-radius: 50%;
+}
+
+.profile-pic-small{
+  height: 50px;
+  width: 50px;
+}
+
+.profile-pic-big{
+  height: 60px;
+  width: 60px;
+}
+
+.m-12{
+  margin-right: 16px;
+}
+
+.m-20{
+  margin-right: 20px;
+}
+
+.greetings p{
+  margin: 0;
+}
+
+.small-text{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.big-text{
+  font-size: 20px;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.row-2 button{
+  background-color: var(--blue2);
+  border: none;
+  border-radius: 20px;
+  width: 80px;
+  padding: 10px;
+  color: var(--white2);
+  margin-right: 20px;
 }
